objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner_Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pain_Points_Prioritized_by_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pain Points Prioritized by Dealer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forecast Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passed_To_Field__c</fullName>
        <label>Passed To Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passed_To_Whom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passed To Whom</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Forecasting_Channel__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Passed to Whom can only be set to a forecasting rep.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phones__c</fullName>
        <label># Phones</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Comments__c</fullName>
        <label>Plan Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_QC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QC to be forecasted by the specific channel.</inlineHelpText>
        <label>Baseline QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Sale_Doc_Provided_to_Installation__c</fullName>
        <label>Post Sale Doc Provided to Installation</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Present_ADP_MSA_Product_Guide_Addenda__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Present ADP MSA, Product Guide, Addenda Prior to Close</inlineHelpText>
        <label>Present ADP MSA, Product Guide, Addenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Present_Proposal_Contract_Completed__c</fullName>
        <label>Present Proposal/Contract Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presented_Commercial_Insight__c</fullName>
        <label>Presented Commercial Insight</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Proposal_Status_Date__c</fullName>
        <label>Price Proposal Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Proposal_Status__c</fullName>
        <label>Price Proposal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Reason__c</fullName>
        <label>Priority Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Accessories__c</fullName>
        <label>Product Accessories</label>
        <picklist>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Market System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Web System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Web-site only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Plug-in Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Design On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms &amp; Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Forms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Web solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting (Call/Ad Tracker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance On-line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_QC_Count__c</fullName>
        <label>Product QC Count</label>
        <summaryForeignKey>Product_QC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard with Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard with Increased Ad Spend</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Products_Mapped__c</fullName>
        <label>Products Mapped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Contract_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal/Contract Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provide_Warm_Intro_to_Imp2__c</fullName>
        <label>Provide Warm Intro to Impl. Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provide_Warm_Intro_to_Impl__c</fullName>
        <label>Provide Warm Intro to Impl.</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_new_commercial_insight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide new commercial insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_Counter_Field__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QC_Total__c</fullName>
        <formula>Digital_Marketing_QC__c +  Digital_Advertising_QC__c +  ADPDS_Digital_Solutions_QC_Total__c</formula>
        <label>QC Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotes_Created_Sent_to_BDC__c</fullName>
        <label>Quotes Created/Sent to BDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_on_Pain_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI on Pain Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROPE_Presented1__c</fullName>
        <label>ROPE Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROPE_Presented__c</fullName>
        <label>ROPE Presented</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSF_Digital_Advertising_QC__c</fullName>
        <label>Digital Advertising QC</label>
        <summarizedField>Product_QC__c.Actual_QC__c</summarizedField>
        <summaryFilterItems>
            <field>Product_QC__c.Quota_Credit_Type_Text__c</field>
            <operation>equals</operation>
            <value>DigA</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_QC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RSF_Digital_Marketing_QC__c</fullName>
        <label>Digital Marketing QC</label>
        <summarizedField>Product_QC__c.Actual_QC__c</summarizedField>
        <summaryFilterItems>
            <field>Product_QC__c.Quota_Credit_Type_Text__c</field>
            <operation>equals</operation>
            <value>DigM</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_QC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RSM_QC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QC to be forecasted by the specific channel.</inlineHelpText>
        <label>RSM QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recap_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked after the recap is completed and ready to send to SOS.</inlineHelpText>
        <label>Recap Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Permission_for_Discovery_Engage__c</fullName>
        <label>Received Permission for Discovery/Engage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recognize_Comments__c</fullName>
        <label>Recognize Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <label>Referenceable Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>References_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>References Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrals_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referrals Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinforce_ROI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinforce ROI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Called_Amount__c</fullName>
        <description>Roll Called Amount</description>
        <label>Roll Called Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SE_PSE__c</fullName>
        <label>SE/PSE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC__c</fullName>
        <description>Field used to improve searches for Opportunities in Global Search (Related to eHelp case #858952)</description>
        <externalId>true</externalId>
        <label>SFDC Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGS_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup - filter on title = SGS Consultant</description>
        <label>SGS Consultant</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>SGS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGS_Demo_Completed__c</fullName>
        <label>SGS Demo Completed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGS_Interest_Category__c</fullName>
        <label>Interest Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGS_Sales_Channel_Requesting_Demo__c</fullName>
        <description>Sales Channel Requesting Demo</description>
        <label>Sales Channel Requesting Demo</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound SGS Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGS_Solutions__c</fullName>
        <label>Solution(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuzzTrak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA/SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNewsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LiveChat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media/Rep Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SLX_Opp_CreateDate__c</fullName>
        <inlineHelpText>SalesLogix Opportunity Create Date</inlineHelpText>
        <label>SalesLogix Opp Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_Opportunity_ID__c</fullName>
        <label>SLX Opportunity ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMOwnerID__c</fullName>
        <label>SMOwnerID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Op_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is selected by Sales Ops after they have confirmed the receipt of a customer order.</inlineHelpText>
        <label>Sales Op Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Comments__c</fullName>
        <label>Search Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_Comments__c</fullName>
        <label>Select Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Location__c</fullName>
        <label>Site Visit Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Status_Date__c</fullName>
        <label>Site Visit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Visit__c</fullName>
        <label>Site Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Walk2__c</fullName>
        <label>Site Walk</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Info_Sent_PSE_BDC__c</fullName>
        <inlineHelpText>Date Site Walk Info was sent to SE/PSE to be Quoted</inlineHelpText>
        <label>Site Walk Info Sent PSE-BDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Walk__c</fullName>
        <label>Site Walk Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label># Sites</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Center__c</fullName>
        <label>Solution Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Completion_Date__c</fullName>
        <label>Solution Design Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Forms_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Forms Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSM_Comments__c</fullName>
        <label>TSM Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TSM_QC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QC to be forecasted by the specific channel.</inlineHelpText>
        <label>TSM QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telesales_Product_Contract__c</fullName>
        <formula>hyperlink(&quot;http://dsows1he.hoffman.ds.adp.com/dwapp_public/onsite_detail_n?v_contractid=&quot; &amp;  Contract_Number__c, Contract_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telesales Product Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telesales_Product_Interest__c</fullName>
        <label>Telesales Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>...</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_3_Dealer_Objections__c</fullName>
        <label>Top 3 Dealer Objections</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Spend_Analysis_Comm_Expense__c</fullName>
        <inlineHelpText>Total Dealer Spend Analysis on Communication Expenses Completed</inlineHelpText>
        <label>Total Dealer Spend Analysis Comm Expense</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Dlr_Spend_Overview2__c</fullName>
        <label>Total Dlr Spend Overview</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Dlr_Spend_Overview__c</fullName>
        <label>Total Dlr Spend Overview Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_of_Buildings__c</fullName>
        <label>Total # of Buildings</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_Sites__c</fullName>
        <label>Total # of Sites</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Solution_Reconfirm_Timeline__c</fullName>
        <inlineHelpText>Validate Solution/Reconfirm Timeline Completed</inlineHelpText>
        <label>Validate Solution/Reconfirm Timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Scorecard_Upload_Date__c</fullName>
        <inlineHelpText>Please remember to attach the Value Scorecard in the Notes &amp; Attachments section at the Account, not the Opportunity.</inlineHelpText>
        <label>Value Scorecard (Upload Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verify_results_of_solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify results of solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatID__c</fullName>
        <formula>RecordTypeId</formula>
        <label>WhatID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_the_business_hurts__c</fullName>
        <label>What are the hurts?</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <inlineHelpText>This is an example of a dependent picklist, you can set it once the Stage = Closed Lost</inlineHelpText>
        <label>Winning Competitor</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>ABC Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JKL Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XYZ Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>ADP Dealer Services ANS Account</value>
        </filters>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BZ_Mapped_Without_Team</fullName>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Difficulty__c</columns>
        <columns>Priority__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Products_Mapped__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Date_Submitted_to_SOS__c</columns>
        <columns>Recap_Completed__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products_Mapped__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0. Undiscovered,Initial Outreach</value>
        </filters>
        <label>BZ Mapped In Stage 0 &amp; Initial Outreach</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>BZ_Migration_Opportunities_Closed</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.BZ_Migration</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>BZ Migration Opportunities (Closed)</label>
        <sharedTo>
            <role>BZMigrationOutreach</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BZ_Migration_Opportunities_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.BZ_Migration</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>BZ Migration Opportunities (Open)</label>
        <sharedTo>
            <role>BZMigrationOutreach</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BZ_Migration_Won</fullName>
        <columns>Migration_Team__c</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Date_Submitted_to_SOS__c</columns>
        <columns>Recap_Completed__c</columns>
        <columns>Priority__c</columns>
        <columns>Difficulty__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.BZ_Migration</value>
        </filters>
        <label>BZ Migration Won</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ADP_Opportunity_Owner__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Close</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OppView__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
</CustomObject>